# textranker

./: .gitignore  404.html  CLAUDE.md  Cargo.toml  README.md  index.html  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: CI.yml  publish-pypi.yml  publish-testpypi.yml
algorithms/: index.html
algorithms/base-textrank/: index.html
algorithms/biased-textrank/: index.html
algorithms/choosing-a-variant/: index.html
algorithms/how-textrank-works/: index.html
algorithms/multipartite-rank/: index.html
algorithms/position-rank/: index.html
algorithms/single-rank/: index.html
algorithms/topic-rank/: index.html
algorithms/topical-pagerank/: index.html
api/: index.html
api/extract-keywords/: index.html
api/extractor-classes/: index.html
api/json-interface/: index.html
api/result-objects/: index.html
api/spacy-integration/: index.html
api/supported-languages/: index.html
api/textrank-config/: index.html
api/topic-utilities/: index.html
architecture/composition-matrix/: index.html
architecture/debug-introspection/: index.html
architecture/pipeline/: index.html
architecture/production-hardening/: index.html
benches/: benchmark.rs
development/contributing/: index.html
docs/: index.md
docs/architecture/: composition-matrix.md  pipeline.md  production-hardening.md
getting-started/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting-started/recipes/: index.html
notebooks/: 01_quickstart.ipynb  02_algorithm_variants.ipynb  03_explain_algorithm.ipynb  04_benchmarks.ipynb
performance/: index.html
performance/benchmarks/: index.html
performance/comparison/: index.html
performance/why-rust-is-fast/: index.html
python/benchmarks/: bench_gil_release.py
python/rapid_textrank/: __init__.py  spacy_component.py  topic_utils.py
python/tests/: test_api.py  test_topic_utils.py
reference/citation/: index.html
reference/faq/: index.html
reference/license/: index.html
reference/release-notes/: index.html
search/: search_index.json
src/: clustering.rs  errors.rs  lib.rs  types.rs
src/graph/: builder.rs
src/nlp/: tokenizer.rs
src/phrase/: chunker.rs  dedup.rs  extraction.rs
src/pipeline/: artifacts.rs  errors.rs  mod.rs  runner.rs  spec.rs  spec_builder.rs  traits.rs  validation.rs
src/python/: json.rs  mod.rs  native.rs
src/variants/: biased_textrank.rs  mod.rs  multipartite_rank.rs  position_rank.rs  single_rank.rs  topic_rank.rs  topical_pagerank.rs
tests/: integration_tests.rs  property_tests.rs
