[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rapid_textrank"
version = "0.1.0"
description = "High-performance TextRank implementation with Python bindings"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [
    { name = "TextRanker Contributors" }
]
keywords = ["nlp", "textrank", "keyword-extraction", "summarization", "pagerank"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://github.com/xang1234/rapid-textrank"
Repository = "https://github.com/xang1234/rapid-textrank"
Issues = "https://github.com/xang1234/rapid-textrank/issues"

[project.optional-dependencies]
spacy = ["spacy>=3.0"]
dev = ["pytest>=7.0", "pytest-benchmark", "spacy>=3.0"]

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "rapid_textrank._rust"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
